# spider

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/crawler/: mycontroller.cpp  mydownloader.cpp  myhttp.cpp  mymemorizer.cpp  mymulio.cpp  myparser.cpp  mysocket.cpp  myurl.cpp  myutil.cpp
src/headers/: mycontroller.h  mydownloader.h  myhttp.h  mymemorizer.h  mymulio.h  myparser.h  mysocket.h  myurl.h  myutil.h  pch.h
